Make sure annotations don't get cut off.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -149,7 +149,7 @@ footer {
             float: left;
             padding: 0 20px 20px 20px;
             width: 20%;
-            min-width: 246px;
+            min-width: 258px;
             height: calc(100% - 240px);
             z-index: 100;
             position: relative;
@@ -330,7 +330,7 @@ footer {
             color: #333333;
             position: absolute;
             bottom: 20px;
-            left: 20px;
+            left: 10px;
             height: 100px;
             
             div {
